# MyNoodles

./: .gitignore  README.md  pyproject.toml
Noodles/: db.sqlite3  manage.py
Noodles/Noodles/: asgi.py  settings.py  urls.py  wsgi.py
Noodles/main_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Noodles/main_app/migrations/: 0001_initial.py  0002_alter_country_name_alter_manufacturer_name_and_more.py  0003_alter_country_name_alter_manufacturer_name.py
Noodles/main_app/templates/: index.html
